--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "E:/ENTREPRENEURSHIP/summer2025embedded/Pico/pico-sdk"
+    "cmake.sourceDirectory": "C:/2025Summerstuff/Summer2025embedded/Pico/Cppembed/w1"
 }
